syntax = "proto3";
package stateset.ssusd.v1;

import "gogoproto/gogo.proto";
import "stateset/ssusd/v1/params.proto";
import "stateset/ssusd/v1/ssusd.proto";

option go_package = "github.com/stateset/core/x/ssusd/types";

// GenesisState defines the ssUSD module's genesis state
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated CollateralPosition positions = 2 [(gogoproto.nullable) = false];
  repeated AgentWallet agent_wallets = 3 [(gogoproto.nullable) = false];
  repeated OraclePrice oracle_prices = 4 [(gogoproto.nullable) = false];
  repeated LiquidationAuction active_auctions = 5 [(gogoproto.nullable) = false];
  StabilityPool stability_pool = 6 [(gogoproto.nullable) = false];
  SystemMetrics system_metrics = 7 [(gogoproto.nullable) = false];
  uint64 next_position_id = 8;
  uint64 next_auction_id = 9;
}